--- a/game 1/style.css
+++ b/game 1/style.css
@@ -418,13 +418,18 @@ input[type=number] {
     }
 }
 
-
-@media only screen and (max-width: 1200px) {
-    .mobileContainer {
-        width: 100%;
-        display: none;
-    }
+.PreviseGameDetaHeading{
+    position: absolute;
+        top: 10px;
+        color: #464545  ;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: bold;
+        text-transform: uppercase;
+       
+        
 }
+
+
 @media only screen and (max-width: 600px) {
     .mein {
         width: 100%;
@@ -540,7 +545,7 @@ input[type=number] {
 
     .mobileContainer {
         width: 100%;
-        display: block;
+        display: block !important;
     }
 
     .mobileHeader {
@@ -562,7 +567,7 @@ input[type=number] {
         letter-spacing: 1.4px;
         font-weight: bold;
         flex-wrap: wrap;
-
+        text-transform: capitalize !important;
     }
 
     .boxes {
@@ -575,6 +580,7 @@ input[type=number] {
             justify-content: space-between;
             padding: 10px;
             text-align: center;
+           
         }
         .dateData {
             width: 0px !important;
@@ -599,5 +605,16 @@ input[type=number] {
             margin-right: 50px;
         }
     }
+    .PreviseGameDetaHeading{
+        position: absolute;
+            top: 10px;
+            left: 10px;
+            font-family: Arial, Helvetica, sans-serif;
+            font-weight: bold;
+            text-transform: uppercase;
+           
+            
+    }
+    
 
 }
