--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ ul li a {
         align-items: center;
         justify-content: center;
         cursor: pointer;
-       
+       position: relative;
         .inner {
             width: 100%;
             height: 100%;
@@ -160,7 +160,7 @@ ul li a {
                 align-items: center;
                 justify-content: center;
                 gap: 10px;
-            }
+            } 
 
         }
     }
@@ -171,7 +171,7 @@ ul li a {
 
     .box img {
         width: 100%;
-        height: 101%;
+        height: 100%;
         object-fit: cover;
         transform-origin: top;
 
