--- a/game 3/style.css
+++ b/game 3/style.css
@@ -2,8 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
+*:focus {
+    outline: none;
+  }
 
+  
 html,
 body {
     height: 100%;
