--- a/game 3/style.css
+++ b/game 3/style.css
@@ -2,13 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
-}
-*:focus {
-    outline: none;
-  }
 
-  
+}
+
+
 html,
 body {
     height: 100%;
@@ -25,7 +22,7 @@ body a {
 }
 
 :root {
-    --lineColor: rgba(219, 219, 172, 0.253);
+    --lineColor: rgba(61, 61, 46, 0.253);
 }
 
 #container {
@@ -37,10 +34,12 @@ body a {
     justify-content: center;
     flex-direction: column;
     margin-bottom: 50px;
+    overflow: hidden;
+
 }
 
 .score {
-    width: 400px;
+    width: 450px;
     height: 50px;
     border: 1px solid;
     display: flex;
@@ -52,8 +51,12 @@ body a {
     font-weight: bold;
 }
 
+.score span img {
+    width: 20px;
+}
+
 .tiktactobox {
-    width: 400px;
+    width: 450px;
     height: 300px;
     box-shadow: rgba(255, 255, 255, 0.1) 0px 0px 8px 0px;
     display: flex;
@@ -66,8 +69,10 @@ body a {
     border-radius: 5px;
     border: none;
     overflow: hidden;
-    margin-top: 40px;
-  
+    margin-top: 20px;
+    background-color: #dadada;
+    border: 2px solid var(--lineColor);
+
 }
 
 .box {
@@ -77,22 +82,32 @@ body a {
     display: flex;
     align-items: center;
     justify-content: center;
-      transition: all .4s linear;
+    transition: all .4s linear;
+
+}
+
+.box:active {
+    outline: none;
+}
+
+.box:focus {
+    display: none;
+    outline: none;
 }
 
 .line1 {
-    width: 1px;
-    height: 100%;
+    width: 2px;
+    height: 120%;
     background-color: var(--lineColor);
-    left: 34%;
+    left: 05.6%;
     position: absolute;
 }
 
 .line2 {
-    width: 1px;
+    width: 2px;
     height: 100%;
     background-color: var(--lineColor);
-    left: 66%;
+    left: 104%;
     position: absolute;
 }
 
@@ -101,12 +116,12 @@ body a {
 }
 
 .line3 {
-    width: 1px;
-    height: 134%;
+    width: 2px;
+    height: 154%;
     background-color: var(--lineColor);
     position: absolute;
     position: absolute;
-    top: -33%;
+    top: -83%;
     left: 0%;
     transform: rotateZ(90deg)translate(-50%, -50%);
     -webkit-transform: rotateZ(90deg)translate(-50%, -50%);
@@ -117,13 +132,13 @@ body a {
 }
 
 .line4 {
-    width: 1px;
-    height: 134%;
+    width: 2px;
+    height: 154%;
 
     background-color: var(--lineColor);
     position: absolute;
     position: absolute;
-    top: 0%;
+    top: -101%;
     left: 0%;
     transform: rotateZ(90deg)translate(-50%, -50%);
     -webkit-transform: rotateZ(90deg)translate(-50%, -50%);
@@ -131,4 +146,347 @@ body a {
     -ms-transform: rotateZ(90deg)translate(-50%, -50%);
     -o-transform: rotateZ(90deg)translate(-50%, -50%);
     transform-origin: center;
+}
+
+.loading {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #dadada;
+    flex-direction: column;
+
+    .images {
+        width: 100%;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    .images img {
+        width: 70px;
+    }
+
+    .player-1 {
+        /* margin-top: -500px; */
+    }
+
+    .player-2 {
+        /* margin-top: -500px; */
+    }
+
+    .plyer {
+        animation: plyer 3s infinite linear;
+        -webkit-animation: plyer 3s infinite linear;
+    }
+
+    .player-2 {
+
+        animation-delay: 1s;
+    }
+
+    .vsImg {
+        /* transform: scale(0);
+        -webkit-transform: scale(0);
+        -moz-transform: scale(0);
+        -ms-transform: scale(0);
+        -o-transform: scale(0); */
+    }
+
+    .plyername {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        padding-inline: 25px;
+        font-size: 17px;
+        font-weight: bold;
+        font-family: roboto;
+        margin-top: 20px;
+        text-transform: uppercase;
+        letter-spacing: 1.4px;
+        text-align: center;
+
+        .plyerOnename,
+        .plyerTowname {
+            width: 100px;
+            font-size: 17px;
+            word-wrap: break-word;
+            color: #4a4545;
+            letter-spacing: 2px;
+            /* opacity: 0; */
+        }
+
+
+
+    }
+
+    .loading-line {
+        width: 90%;
+        height: 10px;
+        overflow: hidden;
+        margin-top: 100px;
+        border-radius: 50px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -webkit-border-radius: 50px;
+        -moz-border-radius: 50px;
+        -ms-border-radius: 50px;
+        -o-border-radius: 50px;
+        transform-origin: left;
+    }
+
+    .loading-line-inner {
+        border-radius: 50px;
+        width: 00%;
+        height: 100%;
+        background-color: rgb(0, 183, 255);
+        -webkit-border-radius: 50px;
+        -moz-border-radius: 50px;
+        -ms-border-radius: 50px;
+        -o-border-radius: 50px;
+        transition: all .4s linear;
+    }
+
+}
+
+/* .plyerTowname span {
+    font-size: 22px;
+} */
+
+@keyframes plyer {
+
+
+    20% {
+        transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        -o-transform: scale(1.1);
+    }
+
+
+
+    100% {
+        transform: scale(1);
+        -webkit-transform: scale(1);
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+    }
+}
+
+.winerDisplay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 20px;
+    flex-direction: column;
+    text-align: center;
+    gap: 20px;
+      transition: all .4s linear;
+    opacity: 0;
+    pointer-events: none;
+
+}
+.winerImgParent {
+    width: 00px ;
+    height: 100px;
+}
+
+
+.winerImgParent {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+}
+.skip{
+    letter-spacing: 0px;
+    padding: 10px 20px;
+    background-color: #04aa6d;
+    color: #fff;
+    border-radius: 5px;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+
+.playBtn {
+    padding: 10px 20px;
+    background-color: #04aa6d;
+    font-family: roboto;
+    margin-top: 10px;
+    font-size: 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    color: #ffff;
+}
+
+.popupContainer {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+
+}
+
+.backgroundBlur {
+    background: rgba(17, 1, 1, 0.2);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(5px);
+}
+
+
+.askname {
+    width: 270px;
+    height: 270px;
+    position: absolute;
+    background-color: #fff;
+    border-radius: 5px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 15px;
+    font-family: roboto;
+    font-weight: 400;
+    display: flex;
+    gap: 15px;
+    flex-direction: column;
+    text-transform: capitalize;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all .4s linear;
+    margin-top: -700px;
+}
+
+.askname h3 {
+    width: 200px;
+    display: flex;
+    align-items: start !important;
+
+}
+
+.askname h3 span img {
+    display: inline-block;
+    width: 20px;
+    margin-left: 5px;
+
+
+}
+
+.askname input {
+    outline: none;
+    border: 1px solid;
+    width: 200px;
+    height: 40px;
+    text-indent: 15px;
+    border-radius: 5px;
+    caret-color: DeepPink;
+    transition: all .2s linear;
+    -webkit-transition: all .2s linear;
+    -moz-transition: all .2s linear;
+    -ms-transition: all .2s linear;
+    -o-transition: all .2s linear;
+}
+
+.askname input::selection {
+    color: rgb(156, 156, 127);
+}
+
+.enter {
+    padding: 8px 20px;
+    text-transform: uppercase;
+    background-color: #04aa6d;
+    color: #fff;
+    font-family: monospace;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    cursor: pointer;
+}
+
+.askname input:focus {
+    border: 1px solid rgb(157, 227, 255);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media only screen and (max-width:600px) {
+
+    #container {
+        justify-content: start;
+    }
+
+    .score {
+        font-size: 15px;
+        padding-inline: 10px;
+
+
+
+        margin-bottom: 200px;
+        background-color: #dadada;
+        color: #000;
+    }
+
+
+    .askname {
+        width: 270px;
+        height: 270px;
+    }
+
+    input {
+        cursor: none;
+    }
+
+    .box {
+        cursor: none;
+    }
+
+    .playBtn {
+        cursor: none;
+    }
+
+    .images {
+        padding: 30px;
+    }
+
+    .plyername {
+        padding-inline: 50px !important;
+    }
+
+
+
+
 }
