--- a/game 3/style.css
+++ b/game 3/style.css
@@ -171,11 +171,11 @@ body a {
     }
 
     .player-1 {
-        /* margin-top: -500px; */
+        margin-top: -500px;
     }
 
     .player-2 {
-        /* margin-top: -500px; */
+        margin-top: -500px;
     }
 
     .plyer {
