--- a/game 3/style.css
+++ b/game 3/style.css
@@ -295,13 +295,14 @@ body a {
     flex-direction: column;
     text-align: center;
     gap: 20px;
-      transition: all .4s linear;
+    transition: all .4s linear;
     opacity: 0;
     pointer-events: none;
 
 }
+
 .winerImgParent {
-    width: 00px ;
+    width: 00px;
     height: 100px;
 }
 
@@ -311,7 +312,8 @@ body a {
     height: 100px;
     object-fit: cover;
 }
-.skip{
+
+.skip {
     letter-spacing: 0px;
     padding: 10px 20px;
     background-color: #04aa6d;
@@ -320,6 +322,35 @@ body a {
     font-size: 15px;
     cursor: pointer;
 }
+
+.ifNotWinAnnyOne {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    letter-spacing: 2px;
+    transition: all .4s linear;
+    pointer-events: none;
+    opacity: 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 .playBtn {
@@ -454,7 +485,6 @@ body a {
         padding-inline: 10px;
 
 
-
         margin-bottom: 200px;
         background-color: #dadada;
         color: #000;
@@ -479,7 +509,7 @@ body a {
     }
 
     .images {
-        padding: 30px;
+        padding-inline: 40px;
     }
 
     .plyername {
